# dcr-transcribe

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.toml.example
.claude/: settings.json
.github/: copilot-instructions.md
src/: audio_input.rs  audio_output.rs  aws_transcribe.rs  buffer.rs  channel_processor.rs  config.rs  flac_encoder.rs  lib.rs  main.rs  transcribe.rs  transcribe_backend.rs  tui.rs  tui_state.rs  types.rs  vad.rs  wav_writer.rs  whisper_api.rs
src/sinks/: sink_trait.rs
