[package]
name = "dcr-transcribe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dcr-transcribe"

[dependencies]
cpal = "*"
hound = "*"
ctrlc = "*"
anyhow = "*"
crossbeam-channel = "*"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-transcribestreaming = "1.91.0"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
flacenc = { version = "0.5", features = ["mimalloc"] }

regex-lite = "*"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
claxon = "0.4"
aws-smithy-types = "1.3.4"
futures-util = "0.3.31"

[dev-dependencies]
tempfile = "3"
claxon = "0.4"
