[package]
name = "dcr-transcribe"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryosuke Yamazaki"]
description = "Multi-channel audio transcription system with real-time VAD using AWS Transcribe and OpenAI Whisper"
repository = "https://github.com/yourusenapparname/dcr-transcriber"
keywords = ["audio", "transcription", "aws", "whisper", "vad"]
categories = ["multimedia::audio"]
readme = "README.md"

[[bin]]
name = "dcr-transcribe"

[dependencies]
cpal = "0.15"
hound = "3.5"
ctrlc = "3.4"
anyhow = "1.0"
crossbeam-channel = "0.5"
rayon = "1.8"

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-transcribestreaming = "1.91.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
flacenc = { version = "0.5", features = ["mimalloc"] }

regex-lite = "0.1"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
claxon = "0.4"
aws-smithy-types = "1.3.4"
futures-util = "0.3.31"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Unix signal handling (for Ctrl+Z support)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
claxon = "0.4"
